<resources>
    <string name="app_name">MyPassword</string>
    <string name="logo">logo</string>
    <string name="icon">icon</string>
    <string name="set_password_title">Set Your \n Master Password</string>
    <string name="enter_password_title">Enter Your \n Master Password</string>
    <string name="enter_password_placeholder">Enter Password</string>
    <string name="confirm_password_placeholder">Confirm Password</string>
    <string name="hint_placeholder">Hint (Optional)</string>
    <string name="set_password">SET PASSWORD</string>
    <string name="confirm">CONFIRM</string>
    <string name="unlock">UNLOCK</string>
    <string name="title_activity_passwords">Passwords</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_label">Site Name</string>
    <string name="username_label">Username</string>
    <string name="password_label">Password</string>
    <string name="password_generator_btn"><u>Password Generator</u></string>
    <string name="category_label">Category</string>
    <string name="url_label">URL (Optional)</string>
    <string name="note_label">Note (Optional)</string>
    <string name="password_generator_title">Password Generator</string>
    <string name="password_minimum_length">4</string>
    <string name="password_maximum_length">20</string>
    <string name="password_include_uppercase">Include uppercase</string>
    <string name="password_include_lowercase">Include lowercase</string>
    <string name="password_include_numbers">Include numbers</string>
    <string name="password_include_symbols">Include symbols</string>
    <string name="password_use_btn">Use This Password</string>
    <string name="password_create_btn">Create Password</string>
    <string name="password_close_btn">Close</string>
    <string name="password_refresh_btn">Refresh</string>
    <string name="password_copy_btn">Copy</string>
    <string name="confirm_btn">Confirm</string>
    <string name="add_category_title">Add Category</string>
    <string name="edit_category_title">Edit Category</string>
    <string name="category_name_label">Category Name</string>
    <string name="new_category_name_label">New Category Name</string>
    <string name="export_title">Export to...</string>
    <string name="import_title">Import from...</string>
    <string name="google">Google Chrome</string>
    <string name="firefox">Mozilla Firefox</string>
    <string name="edge">Microsoft Edge</string>
    <string name="change_master_password_title">Change Master Password</string>
    <string name="enter_current_password_placeholder">Current Password</string>
    <string name="enter_new_password_placeholder">New Password</string>
    <string name="confirm_new_password_placeholder">Confirm Password</string>
    <string name="auto_lock_title">Auto-lock</string>
    <string name="auto_lock_2">2 minutes</string>
    <string name="auto_lock_5">5 minutes</string>
    <string name="auto_lock_10">10 minutes</string>
    <string name="auto_lock_15">15 minutes</string>
    <string name="auto_lock_30">30 minutes</string>
    <string name="auto_lock_60">60 minutes</string>
    <string name="auto_lock_never">Never</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">Main</string>
</resources>