<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/import_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Title" />

    <RadioGroup
        android:id="@+id/import_radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:checkedButton="@id/import_google">

        <RadioButton
            android:id="@+id/import_google"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layoutDirection="rtl"
            android:text="@string/google"
            android:tag="google" />

        <RadioButton
            android:id="@+id/import_firefox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layoutDirection="rtl"
            android:text="@string/firefox"
            android:tag="firefox"/>

        <RadioButton
            android:id="@+id/import_edge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layoutDirection="rtl"
            android:text="@string/edge"
            android:tag="edge"/>

    </RadioGroup>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/confirm_import_btn"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginVertical="10dp"
        android:background="@drawable/rounded_button_purple"
        android:text="@string/confirm_btn"
        android:textAllCaps="true"
        android:textColor="@color/white" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/close_import_btn"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginVertical="10dp"
        android:background="@drawable/rounded_button_light"
        android:text="@string/password_close_btn"
        android:textAllCaps="true"
        android:textColor="@color/purple_500" />

</LinearLayout>