<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="16dp">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/password_generator_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Title" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        app:hintEnabled="false">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/use_password_generated"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Generated Password"
            android:textSize="20sp"
            android:ems="15"
            android:background="@drawable/rounded_edittext"
            android:inputType="none"
            android:paddingVertical="10dp"
            android:paddingHorizontal="10dp"
            android:gravity="center"
            android:focusable="false"
            android:enabled="false"
            android:textColor="@color/black"/>

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/use_password_strength"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/use_password_refresh"
            android:layout_width="85dp"
            android:layout_height="30dp"
            android:background="@drawable/rounded_button_purple_outline"
            android:text="@string/password_refresh_btn"
            android:textColor="@color/purple_500"
            android:textAllCaps="false"
            android:layout_marginHorizontal="5dp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/use_password_copy"
            android:layout_width="65dp"
            android:layout_height="30dp"
            android:background="@drawable/rounded_button_purple_outline"
            android:text="@string/password_copy_btn"
            android:textColor="@color/purple_500"
            android:textAllCaps="false"
            android:layout_marginHorizontal="5dp"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="20dp"
            android:layout_height="match_parent"
            android:text="@string/password_minimum_length"
            android:gravity="center"
            android:layout_margin="5dp"/>
        <com.google.android.material.slider.Slider
            android:id="@+id/use_password_slider"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:value="12"
            android:valueFrom="4.0"
            android:valueTo="20.0"
            android:stepSize="1.0"/>
        <TextView
            android:layout_width="20dp"
            android:layout_height="match_parent"
            android:text="@string/password_maximum_length"
            android:gravity="center"
            android:layout_margin="5dp"/>
    </androidx.appcompat.widget.LinearLayoutCompat>

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/use_password_uppercase_switch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:checked="true"
        android:text="@string/password_include_uppercase"/>

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/use_password_lowercase_switch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:checked="true"
        android:text="@string/password_include_lowercase"/>

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/use_password_numbers_switch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:checked="true"
        android:text="@string/password_include_numbers"/>

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/use_password_symbols_switch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:checked="true"
        android:text="@string/password_include_symbols"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/use_password_btn"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginVertical="10dp"
        android:background="@drawable/rounded_button_purple"
        android:text="@string/password_use_btn"
        android:textAllCaps="true"
        android:textColor="@color/white" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/close_use_btn"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginVertical="10dp"
        android:background="@drawable/rounded_button_light"
        android:text="@string/password_close_btn"
        android:textAllCaps="true"
        android:textColor="@color/purple_500" />
</LinearLayout>