<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="16dp"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/change_master_password_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Title" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/enter_current_password_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        app:hintEnabled="false"
        app:errorIconDrawable="@null"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/enter_current_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:background="@drawable/rounded_edittext"
            android:hint="@string/enter_current_password_placeholder"
            android:inputType="textPassword"
            android:paddingHorizontal="10dp"
            android:paddingVertical="10dp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/enter_new_password_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        app:hintEnabled="false"
        app:errorIconDrawable="@null"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/enter_new_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:background="@drawable/rounded_edittext"
            android:hint="@string/enter_new_password_placeholder"
            android:inputType="textPassword"
            android:paddingHorizontal="10dp"
            android:paddingVertical="10dp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/confirm_new_password_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        app:hintEnabled="false"
        app:errorIconDrawable="@null"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/confirm_new_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:background="@drawable/rounded_edittext"
            android:hint="@string/confirm_new_password_placeholder"
            android:inputType="textPassword"
            android:paddingHorizontal="10dp"
            android:paddingVertical="10dp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        app:hintEnabled="false"
        app:endIconMode="clear_text">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/new_hint"
            android:layout_width="match_parent"
            android:layout_height="47dp"
            android:ems="10"
            android:background="@drawable/rounded_edittext"
            android:hint="@string/hint_placeholder"
            android:inputType="text"
            android:paddingHorizontal="10dp"
            android:paddingVertical="10dp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/confirm_change_btn"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginVertical="10dp"
        android:background="@drawable/rounded_button_purple"
        android:text="@string/confirm_btn"
        android:textAllCaps="true"
        android:textColor="@color/white" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/close_change_btn"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginVertical="10dp"
        android:background="@drawable/rounded_button_light"
        android:text="@string/password_close_btn"
        android:textAllCaps="true"
        android:textColor="@color/purple_500" />

</LinearLayout>