<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingVertical="10dp"
    android:paddingHorizontal="15dp"
    tools:context=".EditPassword"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edit_password_title_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        app:hintEnabled="true"
        android:hint="@string/title_label"
        app:endIconMode="clear_text"
        app:errorEnabled="true"
        app:errorIconDrawable="@null"
        app:counterEnabled="true"
        app:counterMaxLength="40">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_password_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="15"
            android:background="@drawable/rounded_edittext"
            android:inputType="text"
            android:paddingHorizontal="10dp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edit_password_username_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        app:hintEnabled="true"
        android:hint="@string/username_label"
        app:endIconMode="clear_text"
        app:errorEnabled="true"
        app:errorIconDrawable="@null"
        app:counterEnabled="true"
        app:counterMaxLength="40">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_password_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="15"
            android:background="@drawable/rounded_edittext"
            android:inputType="text"
            android:paddingHorizontal="10dp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edit_password_password_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        app:hintEnabled="true"
        android:hint="@string/password_label"
        app:passwordToggleEnabled="true"
        app:helperTextEnabled="true"
        app:errorEnabled="true"
        app:errorIconDrawable="@null"
        app:counterEnabled="true"
        app:counterMaxLength="20">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_password_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="15"
            android:background="@drawable/rounded_edittext"
            android:inputType="textPassword"
            android:paddingHorizontal="10dp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/edit_password_generator_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password_generator_btn"
        android:textAllCaps="false"
        style="@style/Widget.MaterialComponents.Button.TextButton" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        app:hintEnabled="true"
        android:hint="@string/category_label"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu">

        <AutoCompleteTextView
            android:id="@+id/edit_password_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        app:hintEnabled="true"
        android:hint="@string/url_label"
        app:endIconMode="clear_text">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_password_url"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="15"
            android:background="@drawable/rounded_edittext"
            android:inputType="textUri"
            android:paddingHorizontal="10dp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edit_password_note_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        app:hintEnabled="true"
        android:hint="@string/note_label"
        app:endIconMode="clear_text"
        app:errorEnabled="true"
        app:errorIconDrawable="@null"
        app:counterEnabled="true"
        app:counterMaxLength="250">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_password_note"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="15"
            android:background="@drawable/rounded_edittext"
            android:inputType="textMultiLine"
            android:paddingHorizontal="10dp"/>

    </com.google.android.material.textfield.TextInputLayout>

</LinearLayout>